[WK2][EFL][GTK] early return of checkSpellingOfString treats correct words as misspelled https://bugs.webkit.org/show_bug.cgi?id=101215

Reviewed by Gustavo Noronha Silva.

Save the misspelled location and length of the string to the default values (-1, 0)
at the beginning of the checkSpellingOfString method.
It assumes that the words are spelled correctly and early return of method doesn't
cause assertions in findFirstMisspelling (WebCore/editing/TextCheckingHelper.cpp).

* platform/text/enchant/TextCheckerEnchant.cpp:
(TextCheckerEnchant::checkSpellingOfString):

Canonical link: https://commits.webkit.org/119420@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133602 268f45cc-cd09-0410-ab3c-d52691b4dbfc